Added the rest of the layers of the app and adjusted the dependencies

--- a/LibrarySystem.Data/LibrarySystem.Data.csproj
+++ b/LibrarySystem.Data/LibrarySystem.Data.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibrarySystem.Common\LibrarySystem.Common.csproj" />
+  </ItemGroup>
+
 </Project>
